--- a/apps/cyberstorm-remix/app/settings/teams/team/tabs/Profile/Profile.css
+++ b/apps/cyberstorm-remix/app/settings/teams/team/tabs/Profile/Profile.css
@@ -4,7 +4,7 @@
     flex-direction: row;
     gap: var(--gap-md);
     align-items: center;
-    align-self: stretch;
+    min-width: min-content;
   }
 
   .team-profile__label {
@@ -17,7 +17,8 @@
   }
 
   .team-profile__input {
-    width: 100%;
+    flex: 1 1 0;
+    min-width: 7rem;
   }
 
   .team-profile__save {
